--- a/css_global.css
+++ b/css_global.css
@@ -291,8 +291,7 @@ header {
 .container_foto_especial{
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 300px;
+  width: 400px;
   height: 300px;
   overflow: hidden;
 }
@@ -751,13 +750,28 @@ flex: 1 0 100%; /* Cada imagen ocupa el 100% del contenedor */
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 250px;
   overflow: hidden;
   margin: 0 auto;
 }
 
   .container_foto_especial img {
+  width: 100%;
+  height: 100%;
+}
+
+  .container_foto_especial_cmd{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 100px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+  .container_foto_especial_cmd img {
   width: 100%;
   height: 100%;
 }
