--- a/M4/WEB/css_global.css
+++ b/M4/WEB/css_global.css
@@ -39,7 +39,7 @@
 }
 
 .imagen_de_fondo{
-  width: 400px;
+  width: 350px;
   height: 300px;
   background-size: cover; /* Hace que la imagen cubra todo el área */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -297,6 +297,40 @@ header {
 }
 
 .container_foto_especial img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+}
+
+.container_foto_juego{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
+  width: 400px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.container_foto_juego img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+}
+
+.container_foto_juego_peque{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
+  width: 250px;
+  height: 50px;
+  overflow: hidden;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.container_foto_juego_peque img {
   max-width: 100%;
   max-height: 100%;
   height: auto;
@@ -775,7 +809,42 @@ flex: 1 0 100%; /* Cada imagen ocupa el 100% del contenedor */
   width: 100%;
   height: 100%;
 }
-  .carousel-container {
+
+.container_foto_juego{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.container_foto_juego img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+}
+
+.container_foto_juego_peque{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
+  width: 250px;
+  height: 50px;
+  overflow: hidden;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.container_foto_juego_peque img {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+}
+
+.carousel-container {
     position: relative;
     max-width: 100px;
     max-height: 300px;
